# charla-cicd

./: .dockerignore  .gitignore  Dockerfile  README.md  build.py  del-commit-al-deploy.html  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
app/: __init__.py  site_generator.py
tests/: test_site_generator.py
